Header Section Added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,95 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <!-- start header -->
+    <header class="header">
+        <div class="container">
+            <div class="header-row">
+                <input class="heading-input" type="radio" 
+                name="nav-input" id="open-nav-input">
+                <input class="heading-input" type="radio"
+                name="nav-input" id="close-nav-input" checked>
+                <label for="open-nav-input" class="open-nav-btn">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 496 496" style="enable-background:new 0 0 496 496;" xml:space="preserve">
+                        <g>
+                            <path style="fill:#222222;" d="M472.8,128H23.2C10.4,128,0,116.8,0,104s10.4-24,23.2-24h449.6c12.8,0,23.2,11.2,23.2,24
+                                C496,116.8,485.6,128,472.8,128z"/>
+                            <path style="fill:#222222;" d="M472.8,272H23.2C10.4,272,0,260.8,0,248c0-12.8,10.4-24,23.2-24h449.6c12.8,0,23.2,11.2,23.2,24
+                                C496,260.8,485.6,272,472.8,272z"/>
+                            <path style="fill:#222222;" d="M472.8,416H23.2C10.4,416,0,404.8,0,392s10.4-24,23.2-24h449.6c12.8,0,23.2,11.2,23.2,24
+                                C496,404.8,485.6,416,472.8,416z"/>
+                        </g>
+                        <g>
+                            <path style="fill:#222222;" d="M472.8,368h-108l46.4,48H472c12.8,0,23.2-11.2,23.2-24C496,379.2,485.6,368,472.8,368z"/>
+                            <path style="fill:#222222;" d="M472.8,224H222.4l46.4,48H472c12.8,0,23.2-11.2,23.2-24C495.2,235.2,485.6,224,472.8,224z"/>
+                            <path style="fill:#222222;" d="M472.8,80H80l46.4,48H472c12.8,0,23.2-11.2,23.2-24C496,91.2,485.6,80,472.8,80z"/>
+                        </g>
+                    </svg>
+                </label>
+                <a href="#" class="brand">phone</a>
+                <nav>
+                    <div class="sidebar">
+                        <div class="sidebar-title">
+                            <a href="#" class="sidebar-logo">Phone</a>
+                            <label for="close-nav-input" class="close-nav-btn">
+                                <svg width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M13.41,12l4.3-4.29a1,1,0,1,0-1.42-1.42L12,10.59,7.71,6.29A1,1,0,0,0,6.29,7.71L10.59,12l-4.3,4.29a1,1,0,0,0,0,1.42,1,1,0,0,0,1.42,0L12,13.41l4.29,4.3a1,1,0,0,0,1.42,0,1,1,0,0,0,0-1.42Z"/></svg>
+                            </label>
+                        </div>
+                        <ul class="nav-links">
+                            <li><a href="#">HOME</a></li>
+                            <li><a href="#">CATEGORY</a></li>
+                            <li><a href="#">BLOG</a></li>
+                            <li><a href="#">CONTACT</a></li>
+                        </ul>
+                    </div>
+                </nav>
+                <div class="header-icons">
+                    <a href="#" class="icon">
+                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 350 350" style="enable-background:new 0 0 350 350;" xml:space="preserve">
+                            <g>
+                                <path d="M175,171.173c38.914,0,70.463-38.318,70.463-85.586C245.463,38.318,235.105,0,175,0s-70.465,38.318-70.465,85.587
+                                    C104.535,132.855,136.084,171.173,175,171.173z"/>
+                                <path d="M41.909,301.853C41.897,298.971,41.885,301.041,41.909,301.853L41.909,301.853z"/>
+                                <path d="M308.085,304.104C308.123,303.315,308.098,298.63,308.085,304.104L308.085,304.104z"/>
+                                <path d="M307.935,298.397c-1.305-82.342-12.059-105.805-94.352-120.657c0,0-11.584,14.761-38.584,14.761
+                                    s-38.586-14.761-38.586-14.761c-81.395,14.69-92.803,37.805-94.303,117.982c-0.123,6.547-0.18,6.891-0.202,6.131
+                                    c0.005,1.424,0.011,4.058,0.011,8.651c0,0,19.592,39.496,133.08,39.496c113.486,0,133.08-39.496,133.08-39.496
+                                    c0-2.951,0.002-5.003,0.005-6.399C308.062,304.575,308.018,303.664,307.935,298.397z"/>
+                            </g>
+                        </svg>
+                    </a>
+                    <a href="#" class="icon">
+                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 487.95 487.95" style="enable-background:new 0 0 487.95 487.95;" xml:space="preserve">
+                            <g>
+                                <path d="M481.8,453l-140-140.1c27.6-33.1,44.2-75.4,44.2-121.6C386,85.9,299.5,0.2,193.1,0.2S0,86,0,191.4s86.5,191.1,192.9,191.1
+                                c45.2,0,86.8-15.5,119.8-41.4l140.5,140.5c8.2,8.2,20.4,8.2,28.6,0C490,473.4,490,461.2,481.8,453z M41,191.4
+                                c0-82.8,68.2-150.1,151.9-150.1s151.9,67.3,151.9,150.1s-68.2,150.1-151.9,150.1S41,274.1,41,191.4z"/>
+                            </g>
+                        </svg>                        
+                    </a>
+                    <a href="#" class="icon">
+                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        width="502.714px" height="502.715px" viewBox="0 0 502.714 502.715" style="enable-background:new 0 0 502.714 502.715;"
+                        xml:space="preserve">
+                            <g>
+                                <path d="M449.958,485.949l-32.375-327.957c-0.682-6.923-6.508-12.195-13.465-12.195h-60.545V92.289
+                                C343.573,41.394,302.173,0,251.292,0c-50.887,0-92.282,41.395-92.282,92.289v53.509H98.458c-6.956,0-12.776,5.272-13.464,12.195
+                                L52.433,487.852c-0.377,3.805,0.872,7.586,3.436,10.412c2.563,2.84,6.209,4.451,10.027,4.451h370.792c0.04,0,0.085,0,0.132,0
+                                c7.473,0,13.529-6.062,13.529-13.527C450.348,488.064,450.216,486.982,449.958,485.949z M186.068,92.289
+                                c0-35.963,29.259-65.23,65.223-65.23s65.223,29.268,65.223,65.23v53.509H186.068V92.289z M110.718,172.857h48.291v27.376
+                                c0,7.464,6.059,13.528,13.53,13.528c7.472,0,13.529-6.064,13.529-13.528v-27.376h130.446v27.376
+                                c0,7.464,6.058,13.528,13.528,13.528c7.472,0,13.529-6.064,13.529-13.528v-27.376h48.286l24.62,249.37H86.098L110.718,172.857z
+                                M80.825,475.66l2.603-26.373h335.727l2.603,26.373H80.825z"/>
+                            </g>
+                        </svg>                        
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- end header -->
 </body>
 </html>
