Home Area Added

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header class="header">
         <div class="container">
             <div class="header-row">
-                <input class="heading-input" type="radio" 
+                <input class="hide-input" type="radio" 
                 name="nav-input" id="open-nav-input">
-                <input class="heading-input" type="radio"
+                <input class="hide-input" type="radio"
                 name="nav-input" id="close-nav-input" checked>
                 <label for="open-nav-input" class="open-nav-btn">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -99,5 +99,71 @@
         </div>
     </header>
     <!-- end header -->
+    <!-- start hero area -->
+    <section class="hero-area">
+        <div class="container">
+            <div class="hero-slider">
+                <input class="hide-input" type="radio" name="slider-input" id="left-input">
+                <input class="hide-input" type="radio" name="slider-input" id="right-input">
+                <input class="hide-input" type="radio" name="bullet-input" id="left-bullet">
+                <input class="hide-input" type="radio" name="bullet-input" id="right-bullet">
+                <div class="slides">
+                    <div class="slide">
+                        <div class="text-slide">
+                            <h4>New Inspiration 2020</h4>
+                            <h1>PHONES MADE FOR YOU!</h1>
+                            <p>Trending from mobile and headphone style collection</p>
+                            <a href="#" class="btn">Shop Now</a>
+                        </div>
+                        <div class="img-slide">
+                            <img src="img/banner_01.png" alt="phone img" class="phone-img">
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <div class="text-slide">
+                            <h4>New Inspiration 2020</h4>
+                            <h1>CELL PHONE TOP DEALS!</h1>
+                            <p>Check out the latest deals on cell phones</p>
+                            <a href="#" class="btn">Shop Now</a>
+                        </div>
+                        <div class="img-slide">
+                            <img src="img/banner_02.png" alt="phone img" class="phone-img">
+                        </div>
+                    </div>
+                </div>
+                <div class="slider-controls">
+                    <label for="left-input" class="left-btn">
+                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        width="400.004px" height="400.004px" viewBox="0 0 400.004 400.004" style="enable-background:new 0 0 400.004 400.004;"
+                        xml:space="preserve">
+                            <g>
+                                <path d="M382.688,182.686H59.116l77.209-77.214c6.764-6.76,6.764-17.726,0-24.485c-6.764-6.764-17.73-6.764-24.484,0L5.073,187.757
+                                c-6.764,6.76-6.764,17.727,0,24.485l106.768,106.775c3.381,3.383,7.812,5.072,12.242,5.072c4.43,0,8.861-1.689,12.242-5.072
+                                c6.764-6.76,6.764-17.726,0-24.484l-77.209-77.218h323.572c9.562,0,17.316-7.753,17.316-17.315
+                                C400.004,190.438,392.251,182.686,382.688,182.686z"/>
+                            </g>
+                        </svg>
+                    </label>
+                    <label for="right-input" class="right-btn">
+                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        width="44.952px" height="44.952px" viewBox="0 0 44.952 44.952" style="enable-background:new 0 0 44.952 44.952;"
+                        xml:space="preserve">
+                            <g>
+                                <path d="M44.952,22.108c0-1.25-0.478-2.424-1.362-3.308L30.627,5.831c-0.977-0.977-2.561-0.977-3.536,0
+                                c-0.978,0.977-0.976,2.568,0,3.546l10.574,10.57H2.484C1.102,19.948,0,21.081,0,22.464c0,0.003,0,0.025,0,0.028
+                                c0,1.382,1.102,2.523,2.484,2.523h35.182L27.094,35.579c-0.978,0.978-0.978,2.564,0,3.541c0.977,0.979,2.561,0.978,3.538-0.001
+                                l12.958-12.97c0.885-0.882,1.362-2.059,1.362-3.309C44.952,22.717,44.952,22.231,44.952,22.108z"/>
+                            </g>
+                        </svg>
+                    </label>
+                </div>
+                <div class="bullets">
+                    <label for="left-bullet" class="left-bullet"></label>
+                    <label for="right-bullet" class="right-bullet"></label>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end hero area -->
 </body>
 </html>
