Product Collection Added

--- a/index.html
+++ b/index.html
@@ -165,5 +165,41 @@
         </div>
     </section>
     <!-- end hero area -->
+    <!-- start product collection -->
+    <section class="product-collection">
+        <div class="container">
+            <div class="collection-grid">
+                <div class="collection-col">
+                    <div class="collection-box">
+                        <div class="collection-img">
+                            <img src="img/collection_02.png" alt="collection img" >
+                        </div>
+                        <div class="collection-text">
+                            <div>
+                                <p>New Colors Introduced</p>
+                                <h3>HEADPHONES</h3>
+                                <a href="#" class="btn">Shop Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="collection-col">
+                    <div class="collection-box">
+                        <div class="collection-img">
+                            <img src="img/collection_01.png" alt="collection img" >
+                        </div>
+                        <div class="collection-text">
+                            <div>
+                                <p>Phone Device Preset</p>
+                                <h3>SMARTPHONES</h3>
+                                <a href="#" class="btn">Shop Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end product collection -->
 </body>
 </html>
