--- a/index.html
+++ b/index.html
@@ -960,5 +960,51 @@
         </div>
     </section>
     <!-- end latest product -->
+    <!-- start facility area -->
+    <section class="facility-area">
+        <div class="container">
+            <div class="facility-grid">
+                <div class="facility">
+                    <div class="icon">
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 241.016 241.016" style="enable-background:new 0 0 241.016 241.016;" xml:space="preserve">
+                            <g>
+                                <path d="M210.818,96.393l-49.202,1.644L108.753,0H83.279c-2.791,0-5.052,2.259-5.052,5.055l27.504,94.843l-50.097,2.037
+                                    c-4.312,0.004-8.372,0.732-11.97,1.997l-18.925-32.14L8.857,71.788c-2.105,0.004-3.811,1.708-3.811,3.814l13.848,42.361v5.09
+                                    L5.047,165.414c-0.002,2.105,1.704,3.814,3.809,3.814l15.885,0.004l19.257-32.713c3.514,1.197,7.455,1.885,11.637,1.885
+                                    l50.288,2.046l-27.698,95.516c0,2.795,2.259,5.05,5.052,5.05h25.474l53.227-98.696l48.84,1.631
+                                    c13.894,0,25.152-10.652,25.152-23.779C235.971,107.041,224.713,96.393,210.818,96.393z"/>
+                            </g>
+                        </svg>
+                    </div>
+                    <h3>FREE SHIPPING WORLD WIDE</h3>
+                </div>
+                <div class="facility">
+                    <div class="icon">
+                        <svg width="512px" height="512px" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><title>ionicons-v5-d</title><path d="M32,376a56,56,0,0,0,56,56H424a56,56,0,0,0,56-56V222H32Zm66-76a30,30,0,0,1,30-30h48a30,30,0,0,1,30,30v20a30,30,0,0,1-30,30H128a30,30,0,0,1-30-30Z"/><path d="M424,80H88a56,56,0,0,0-56,56v26H480V136A56,56,0,0,0,424,80Z"/></svg>
+                    </div>
+                    <h3>100% MONEY BACK GUARANTEE</h3>
+                </div>
+                <div class="facility">
+                    <div class="icon">
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        width="92px" height="92px" viewBox="0 0 92 92" enable-background="new 0 0 92 92" xml:space="preserve">
+                        <path id="XMLID_2192_" d="M92,23.4c0-4.1-3.3-7.4-7.4-7.4H7.4C3.3,16,0,19.3,0,23.4v45.3C0,72.7,3.3,76,7.4,76h77.3
+                            c4.1,0,7.4-3.3,7.4-7.4V23.4z M84,24v7H8v-7H84z M8,68V43h76v25H8z M76.5,55c0,2.2-1.8,4-4,4h-19c-2.2,0-4-1.8-4-4s1.8-4,4-4h19
+                            C74.7,51,76.5,52.8,76.5,55z"/>
+                        </svg>
+                    </div>
+                    <h3>MANY PAYMENT GATEWAYS</h3>
+                </div>
+                <div class="facility">
+                    <div class="icon">
+                        <svg width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M20 12v-1.707c0-4.442-3.479-8.161-7.755-8.29-2.204-.051-4.251.736-5.816 2.256A7.933 7.933 0 0 0 4 10v2c-1.103 0-2 .897-2 2v4c0 1.103.897 2 2 2h2V10a5.95 5.95 0 0 1 1.821-4.306 5.977 5.977 0 0 1 4.363-1.691C15.392 4.099 18 6.921 18 10.293V20h2c1.103 0 2-.897 2-2v-4c0-1.103-.897-2-2-2z"/><path d="M7 12h2v8H7zm8 0h2v8h-2z"/></svg>
+                    </div>
+                    <h3>24/7 ONLINE SUPPORT</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end facility area -->
 </body>
 </html>
