Testimonials Section Added

--- a/index.html
+++ b/index.html
@@ -1006,5 +1006,93 @@
         </div>
     </section>
     <!-- end facility area -->
+    <!-- start testimonials -->
+    <section class="testimonials">
+        <div class="container">
+            <input class="hide-input" type="radio" name="testimonial-input" id="lleft-bullet">
+            <input class="hide-input" type="radio" name="testimonial-input" id="center-bullet-1" checked>
+            <input class="hide-input" type="radio" name="testimonial-input" id="center-bullet-2">
+            <input class="hide-input" type="radio" name="testimonial-input" id="rright-bullet">
+            <div class="testimonial-slider">
+                <div class="slides">
+                    <div class="slide">
+                        <img src="img/profile1.jpg" alt="profile img" 
+                        class="profile-img">
+                        <p class="profile-desc">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic nesciunt tempore
+                            quibusdam consequatur
+                            eligendi unde officia ex quae.ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic
+                            nesciunt tempore
+                            quibusdam consequatur eligendi unde officia ex quae.adipisicing elit. Recusandae fuga hic
+                            nesciunt tempore
+                            quibusdam consequatur eligendi unde officia ex quae.
+                        </p>
+                        <div class="profile-date">
+                            <h3 class="profile-name">John Smith</h3>
+                            <span class="profile-job">Founder at Apple</span>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="img/profile2.jpg" alt="profile img" 
+                        class="profile-img">
+                        <p class="profile-desc">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic nesciunt tempore
+                            quibusdam consequatur
+                            eligendi unde officia ex quae.ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic
+                            nesciunt tempore
+                            quibusdam consequatur eligendi unde officia ex quae.adipisicing elit. Recusandae fuga hic
+                            nesciunt tempore
+                            quibusdam consequatur eligendi unde officia ex quae.
+                        </p>
+                        <div class="profile-date">
+                            <h3 class="profile-name">John Smith</h3>
+                            <span class="profile-job">Founder at Apple</span>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="img/profile3.jpg" alt="profile img" 
+                        class="profile-img">
+                        <p class="profile-desc">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic nesciunt tempore
+                            quibusdam consequatur
+                            eligendi unde officia ex quae.ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic
+                            nesciunt tempore
+                            quibusdam consequatur eligendi unde officia ex quae.adipisicing elit. Recusandae fuga hic
+                            nesciunt tempore
+                            quibusdam consequatur eligendi unde officia ex quae.
+                        </p>
+                        <div class="profile-date">
+                            <h3 class="profile-name">John Smith</h3>
+                            <span class="profile-job">Founder at Apple</span>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="img/profile4.jpg" alt="profile img" 
+                        class="profile-img">
+                        <p class="profile-desc">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic nesciunt tempore
+                            quibusdam consequatur
+                            eligendi unde officia ex quae.ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic
+                            nesciunt tempore
+                            quibusdam consequatur eligendi unde officia ex quae.adipisicing elit. Recusandae fuga hic
+                            nesciunt tempore
+                            quibusdam consequatur eligendi unde officia ex quae.
+                        </p>
+                        <div class="profile-date">
+                            <h3 class="profile-name">John Smith</h3>
+                            <span class="profile-job">Founder at Apple</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bullets">
+                <label for="lleft-bullet"></label>
+                <label for="center-bullet-1"></label>
+                <label for="center-bullet-2"></label>
+                <label for="rright-bullet"></label>
+            </div>
+        </div>
+    </section>
+    <!-- end testimonials -->
 </body>
 </html>
