Blog Area Added

--- a/index.html
+++ b/index.html
@@ -1094,5 +1094,53 @@
         </div>
     </section>
     <!-- end testimonials -->
+    <!-- start blog -->
+    <section class="blog">
+        <div class="container">
+            <div class="heading">
+                <span></span>
+                <h2>Phone News</h2>
+            </div>
+            <div class="blog-grid">
+                <div class="blog-cart">
+                    <div class="cart-header">
+                        <img src="img/news1.jpg" alt="blog img">
+                    </div>
+                    <div class="cart-bldy">
+                        <h3 class="blog-title">Styling White Shirts After A Cool Day</h3>
+                        <span>By Admin</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo praesentium, numquam non
+                        provident rem sed minus natus unde vel modi!</p>
+                        <a href="#" class="btn">Read Me</a>
+                    </div>
+                </div>
+                <div class="blog-cart">
+                    <div class="cart-header">
+                        <img src="img/news2.jpg" alt="blog img">
+                    </div>
+                    <div class="cart-bldy">
+                        <h3 class="blog-title">Styling White Shirts After A Cool Day</h3>
+                        <span>By Admin</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo praesentium, numquam non
+                        provident rem sed minus natus unde vel modi!</p>
+                        <a href="#" class="btn">Read Me</a>
+                    </div>
+                </div>
+                <div class="blog-cart">
+                    <div class="cart-header">
+                        <img src="img/news3.jpg" alt="blog img">
+                    </div>
+                    <div class="cart-bldy">
+                        <h3 class="blog-title">Styling White Shirts After A Cool Day</h3>
+                        <span>By Admin</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo praesentium, numquam non
+                        provident rem sed minus natus unde vel modi!</p>
+                        <a href="#" class="btn">Read Me</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end blog -->
 </body>
 </html>
