Newsletter Section Added

--- a/index.html
+++ b/index.html
@@ -1142,5 +1142,21 @@
         </div>
     </section>
     <!-- end blog -->
+    <!-- start newsletter -->
+    <section class="newsletter">
+        <div class="container">
+            <div class="newsletter-row">
+                <div class="newsletter-text">
+                    <h3>SUBSCRIBE TO OUR NEWSLETTER</h3>
+                    <p>A short sentence describing what someone will receive by subscribing</p>
+                </div>
+                <form action="#" class="newsletter-form">
+                    <input type="email" placeholder="enter your email adress">
+                    <input type="submit" value="Subscribe">
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- end newsletter -->
 </body>
 </html>
