--- a/index.html
+++ b/index.html
@@ -1158,5 +1158,63 @@
         </div>
     </section>
     <!-- end newsletter -->
+    <!-- start footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-container">
+                <div class="foot">
+                    <h3 class="foot-title">EXTRAS</h3>
+                    <ul class="links">
+                        <li><a href="#">Brands</a></li>
+                        <li><a href="#">Gift Certificates</a></li>
+                        <li><a href="#">Affiliate</a></li>
+                        <li><a href="#">Specials</a></li>
+                        <li><a href="#">Site Map</a></li>
+                    </ul>
+                </div>
+                <div class="foot">
+                    <h3 class="foot-title">INFORMATION</h3>
+                    <ul class="links">
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Site Map</a></li>
+                    </ul>
+                </div>
+                <div class="foot">
+                    <h3 class="foot-title">MY ACCOUNT</h3>
+                    <ul class="links">
+                        <li><a href="#">Order History</a></li>
+                        <li><a href="#">Wish List</a></li>
+                        <li><a href="#">Newsletter</a></li>
+                        <li><a href="#">Returns</a></li>
+                    </ul>
+                </div>
+                <div class="foot">
+                    <h3 class="foot-title">CONTACT US</h3>
+                    <ul class="links">
+                        <li>
+                            <i class="fas fa-map-marker-alt"></i>
+                            42 Dream House, Dreammy street, 7131 Dreamville, USA
+                        </li>
+                        <li>
+                            <i class="far fa-envelope"></i>
+                            company@gmail.com
+                        </li>
+                        <li>
+                            <i class="fas fa-phone"></i>
+                            456-456-4512
+                        </li>
+                        <li>
+                            <i class="far fa-paper-plane"></i>
+                            Dream City, USA
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- end footer -->
 </body>
 </html>
