--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                         </div>
                         <ul class="nav-links">
                             <li><a href="#">HOME</a></li>
-                            <li><a href="#">CATEGORY</a></li>
-                            <li><a href="#">BLOG</a></li>
-                            <li><a href="#">CONTACT</a></li>
+                            <li><a href="#category">CATEGORY</a></li>
+                            <li><a href="#blog">BLOG</a></li>
+                            <li><a href="#contact">CONTACT</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -202,7 +202,7 @@
     </section>
     <!-- end product collection -->
     <!-- start product category -->
-    <section class="product-category">
+    <section class="product-category" id="category">
         <div class="container">
             <input class='hide-input' type="radio"
             name="tab-input" id="all" checked>
@@ -1095,7 +1095,7 @@
     </section>
     <!-- end testimonials -->
     <!-- start blog -->
-    <section class="blog">
+    <section class="blog" id="blog">
         <div class="container">
             <div class="heading">
                 <span></span>
@@ -1143,7 +1143,7 @@
     </section>
     <!-- end blog -->
     <!-- start newsletter -->
-    <section class="newsletter">
+    <section class="newsletter" id="contact">
         <div class="container">
             <div class="newsletter-row">
                 <div class="newsletter-text">
